Updated pipeline paths

--- a/.github/workflows/ProjectB.yaml
+++ b/.github/workflows/ProjectB.yaml
@@ -13,6 +13,10 @@ on:
       - 'src/ProjectA/src/**'
       - 'src/ProjectB/src/**'
 
+defaults:
+  run:
+    working-directory: ./
+
 jobs:
   build:
     runs-on: ubuntu-latest
