--- a/.github/workflows/ProjectA.yaml
+++ b/.github/workflows/ProjectA.yaml
@@ -11,6 +11,10 @@ on:
     paths:
       - 'src/ProjectA/src/**'
 
+defaults:
+  run:
+    working-directory: ./
+
 jobs:
   build:
     runs-on: ubuntu-latest
