--- a/.github/workflows/ProjectA.yaml
+++ b/.github/workflows/ProjectA.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ "**" ]
     paths:
-      - './src/ProjectA/src/**'
+      - 'src/ProjectA/src/**'
 
   pull_request:
     branches: [ "**" ]
     paths:
-      - './src/ProjectA/src/**'
+      - 'src/ProjectA/src/**'
 
 defaults:
   run:
@@ -25,8 +25,8 @@ jobs:
       with: 
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore 'src/ProjectA/src/ProjectA.csproj'
     - name: Build
-      run: dotnet build './src/ProjectA/src/ProjectA.csproj'
+      run: dotnet build 'src/ProjectA/src/ProjectA.csproj'
     - name: Publish to folder
-      run: dotnet publish './src/ProjectA/src/ProjectA.csproj' --configuration RELEASE --no-build --output './src/ProjectA/ref'
+      run: dotnet publish 'src/ProjectA/src/ProjectA.csproj' --configuration RELEASE --no-build --output 'src/ProjectA/ref'
