--- a/.github/workflows/ProjectB.yaml
+++ b/.github/workflows/ProjectB.yaml
@@ -27,6 +27,6 @@ jobs:
       with: 
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore 'src/ProjectB/src/ProjectB.csproj'
     - name: Build
       run: dotnet build 'src/ProjectB/src/ProjectB.csproj'
