Updated reference project source folder

--- a/.github/workflows/ProjectC.yaml
+++ b/.github/workflows/ProjectC.yaml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ "**" ]
     paths:
-      - 'src/ProjectA/ref/**'
+      - 'src/ProjectA/src/**'
       - 'src/ProjectB/src/**'
 
   pull_request:
     branches: [ "**" ]
     paths:
-      - 'src/ProjectA/ref/**'
+      - 'src/ProjectA/src/**'
       - 'src/ProjectB/src/**'
 
 defaults:
