Updated ProjectC GitHub workflow

--- a/.github/workflows/ProjectC.yaml
+++ b/.github/workflows/ProjectC.yaml
@@ -2,7 +2,8 @@ name: ProjectC build
 
 on: 
   workflow_run:
-    workflows: [ProjectA build]
+    workflows: 
+      - ProjectA build
     types:
       - completed
     branches: [ "**" ]
