Updated ProjectC GitHub workflow

--- a/.github/workflows/ProjectC.yaml
+++ b/.github/workflows/ProjectC.yaml
@@ -8,6 +8,16 @@ on:
       - completed
     branches: [ "**" ]
 
+  push:
+    branches: [ "**" ]
+    paths:
+      - 'src/ProjectC/src/**'
+
+  pull_request:
+    branches: [ "**" ]
+    paths:
+      - 'src/ProjectC/src/**'
+
 defaults:
   run:
     working-directory: ./
