--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -1,8 +1,11 @@
-name: ProjectA rlease
+name: ProjectA release
 
-on: 
-  release:
-    types: [created]
+on:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version'
+        required: true
 
 defaults:
   run:
@@ -17,22 +20,25 @@ jobs:
       uses: actions/setup-dotnet@v3
       with: 
         dotnet-version: 7.0.x
-    - name: Get version
-      id: get_version
-      run: echo ${ GITHUB_REF#refs/*/ }
-    - name: Get commit hash
-      id: get_commit_hash
-      run: echo ${ GITHUB_SHA::8 }
-    - name: Get tag by ref
-      id: get_tag_ref
-      run: echo ${ GITHUB_REF#refs/tags/ }
-    - name: Get tag from release
-      id: get_tag_release
-      run: echo ${ github.event.release.tag_name }
     - name: Restore project dependencies
       run: dotnet restore '/src/ProjectA.csproj'
     - name: Build project
       run: dotnet build '/src/ProjectA.csproj' --configuration Release  --no-restore
+    - name: Check if package exists
+      run: |
+        $response = Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json' -Method Get -ErrorAction SilentlyContinue
+        if ($null -eq $response) {
+          if ("${{ github.event.inputs.version }}" -eq "") {
+            Write-Output "Package does not exist on NuGet and no version input provided"
+            exit 1
+          }
+          echo "NEW_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+        }
+    - name: Get latest version
+      id: latest_version
+      run: |
+        $LATEST_VERSION = (Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json').versions[-1]
+        echo "::set-output name=LATEST_VERSION::$LATEST_VERSION"
     - name: Pack project
       run: |
         dotnet pack '/src/ProjectA.csproj' --configuration Release --output 'src/ProjectA/ref' --output './.nuget/'
