--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       version:
         description: 'Version'
-        required: true
+        required: false
 
 defaults:
   run:
