--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -37,6 +37,7 @@ jobs:
       shell: pwsh
       run: |
         $LATEST_VERSION = (Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json').versions[-1]
+        echo "LATEST_VERSION=" + $LATEST_VERSION
         echo "::set-output name=LATEST_VERSION::$LATEST_VERSION"
     - name: Restore project dependencies
       run: dotnet restore '/src/ProjectA.csproj'
