--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Check if package exists
       shell: pwsh
       run: |
-        $response = Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json' -Method Get -ErrorAction SilentlyContinue
+        $response = Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing123/index.json' -Method Get -ErrorAction SilentlyContinue
         if ($null -eq $response) {
           if ("${{ github.event.inputs.version }}" -eq "") {
             echo "Package does not exist on NuGet and no version input provided"
