--- a/.github/workflows/ProjectA build.yaml
+++ b/.github/workflows/ProjectA build.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ "**" ]
     paths:
-      - 'src/ProjectA/src/**'
+      - 'src/ProjectA/**'
 
   pull_request:
     branches: [ "**" ]
     paths:
-      - 'src/ProjectA/src/**'
+      - 'src/ProjectA/**'
 
 defaults:
   run:
@@ -25,8 +25,6 @@ jobs:
       with: 
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore 'src/ProjectA/src/ProjectA.csproj'
+      run: dotnet restore 'src/ProjectA/ProjectA.csproj'
     - name: Build
-      run: dotnet build 'src/ProjectA/src/ProjectA.csproj'
-    - name: Publish to folder
-      run: dotnet publish 'src/ProjectA/src/ProjectA.csproj' --configuration Release --output 'src/ProjectA/ref'
+      run: dotnet build 'rc/ProjectA/ProjectA.csproj'
