--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -43,6 +43,7 @@ jobs:
       run: |
         $LATEST_VERSION = (Invoke-RestMethod -Uri 'https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json').versions[-1]
         echo $LATEST_VERSION >> $GITHUB_OUTPUT
+        echo "LATEST_VERSION=$LATEST_VERSION"
     - name: Restore project dependencies
       run: dotnet restore 'src/ProjectA/ProjectA.csproj'
     - name: Build project
