--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -26,13 +26,13 @@ jobs:
       shell: pwsh
       run: |
         $response = Invoke-RestMethod -Uri https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json -Method Get
-        ${{ env.VERSION }} = $response.versions[-1]
-        echo ${{ env.VERSION }}
+        $env:VERSION = $response.versions[-1]
+        echo $env:VERSION
         try
         {
           $response = Invoke-RestMethod -Uri https://api.nuget.org/v3-flatcontainer/ezdomain.eventsourcing/index.json -Method Get
-          ${{ env.VERSION }} = $response.versions[-1]
-          echo ${{ env.VERSION }}
+          $env:VERSION = $response.versions[-1]
+          echo $env:VERSION
         }
         catch
         {
