Updated release pipeline.

--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -6,6 +6,7 @@ on:
       project:
         description: 'Project to release'
         required: true
+        type: choice
         options:
         - ezdomain.eventsourcing
         - ezdomain.core
