Updated release pipeline.

--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -57,5 +57,6 @@ jobs:
     - name: Build project
       run: dotnet build 'src/ProjectA/ProjectA.csproj' --configuration Release  --no-restore
     - name: Pack project
+      shell: pwsh
       run: |
-        dotnet pack 'src/ProjectA/ProjectA.csproj' --configuration Release --output .nuget/ -p:PackageVersion=${{ env.VERSION }} --no-restore
+        dotnet pack 'src/ProjectA/ProjectA.csproj' --configuration Release --output .nuget/ -p:PackageVersion=$env:.VERSION --no-restore
