Updated release pipeline.

--- a/.github/workflows/ProjectA release.yml
+++ b/.github/workflows/ProjectA release.yml
@@ -45,7 +45,7 @@ jobs:
         try
         {
           $response = Invoke-RestMethod -Uri https://api.nuget.org/v3-flatcontainer/${{ github.event.inputs.project }}/index.json -Method Get
-          $env:VERSION = $response.versions[-1]
+          ${{ env.VERSION }} = $response.versions[-1]
           echo "NuGet package latest version: $env:VERSION"
         }
         catch
